link html pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="Assets/css/style.css">
 <link rel="stylesheet" href="Assets/css/responsive.css">
 <head>
-	<title>Encirkel</title>
+	<title>Encirkel Website</title>
 </head>
 
 <body>
@@ -19,8 +19,8 @@
 
 					<li> <a href="index.html">Home</a></li>
                     <li> <a href="about-us.html">About</a></li>
-                    <li> <a href="services.html">Services</a></li>
-                    <li> <a href="talk.html" class="btn">Schedule Now</a></li>
+                    <li> <a href="our-services.html">Services</a></li>
+                    <li> <a href="talk-to-us.html" class="btn">Schedule Now</a></li>
 				</ul>
 			</div>
 		</header>
@@ -33,7 +33,7 @@
 				<h3>For B2B small-medium Businesses</h3>
 				<p>Providing affordable digital marketing services to help Small and Medium Businesses in growing
 					digitally</p>
-				<a href="#" class="btn btn-sucess">Schedule Now</a>
+				<a href="talk-to-us.html" class="btn btn-sucess">Schedule Now</a>
 
 			</div>
 		</div>
@@ -162,14 +162,16 @@
 				</div>
 				<div class="col">
 					<h2>Quick Links<h2>
-						<ul class="p-0">
-							<li><a>Home</a></li>
-							<li><a>About Us</a></li>
-							<li><a>Services</a></li>
-							<li><a>Schedule Now</a></li>
+						<nav class="nav">
+						<ul class="p-0 ">
+							<li><a href="index.html" class="text-white">Home</a></li>
+							<li><a href="about-us.html" class="text-white">About Us</a></li>
+							<li><a href="our-services.html" class="text-white">Services</a></li>
+							<li><a href="talk-to-us.html" class="text-white">Schedule Now</a></li>
 						</ul>
+					</nav>
 						<ul class="d-flex  gap-1 mt-2 p-0">
-							<li> <a> <img src="Assets/images/icons/facebook.html"></a> </li>
+							<li> <a > <img src="Assets/images/icons/facebook.svg"></a> </li>
 							<li> <a> <img src="Assets/images/icons/Twitter.svg"></a> </li>
 							<li> <a> <img src="Assets/images/icons/Instagram.svg"></a> </li>
 						</ul>
