--- a/talk-to-us.html
+++ b/talk-to-us.html
@@ -21,8 +21,8 @@
 
                     <li> <a href="index.html">Home</a></li>
                     <li> <a href="about-us.html">About</a></li>
-                    <li> <a href="services.html">Services</a></li>
-                    <li> <a href="talk.html" class="btn">Schedule Now</a></li>
+                    <li> <a href="our-services.html">Services</a></li>
+                    <li> <a href="talk-to-us.html" class="btn">Schedule Now</a></li>
                 </ul>
             </div>
         </header>
@@ -58,17 +58,17 @@
             </div>
 
             <div class="form-group d-flex flex-column mt-2">
-                <label>Name of Business</label>
+                <label>Full Name</label>
                 <input class="form-control">
             </div>
 
             <div class="form-group d-flex flex-column mt-2">
-                <label>Name of Business</label>
+                <label>Email</label>
                 <input class="form-control">
             </div>
 
             <div class="form-group d-flex flex-column mt-2">
-                <label>Name of Business</label>
+                <label>Phone Number</label>
                 <input class="form-control">
             </div>
             
@@ -105,19 +105,21 @@
                     </form>
                 </div>
                 <div class="col">
-                    <h2>Quick Links<h2>
-                            <ul class="p-0">
-                                <li><a>Home</a></li>
-                                <li><a>About Us</a></li>
-                                <li><a>Services</a></li>
-                                <li><a>Schedule Now</a></li>
-                            </ul>
-                            <ul class="d-flex  gap-1 mt-2 p-0">
-                                <li> <a> <img src="Assets/images/icons/facebook.html"></a> </li>
-                                <li> <a> <img src="Assets/images/icons/Twitter.svg"></a> </li>
-                                <li> <a> <img src="Assets/images/icons/Instagram.svg"></a> </li>
-                            </ul>
-                </div>
+					<h2>Quick Links<h2>
+						<nav class="nav">
+						<ul class="p-0 ">
+							<li><a href="index.html" class="text-white">Home</a></li>
+							<li><a href="about-us.html" class="text-white">About Us</a></li>
+							<li><a href="our-services.html" class="text-white">Services</a></li>
+							<li><a href="talk-to-us.html" class="text-white">Schedule Now</a></li>
+						</ul>
+					</nav>
+						<ul class="d-flex  gap-1 mt-2 p-0">
+							<li> <a > <img src="Assets/images/icons/facebook.svg"></a> </li>
+							<li> <a> <img src="Assets/images/icons/Twitter.svg"></a> </li>
+							<li> <a> <img src="Assets/images/icons/Instagram.svg"></a> </li>
+						</ul>
+				</div>
             </div>
 
         </div>
